updated languages, added some links, updated latest offers

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -129,5 +129,7 @@
     "ofert i regularnie dodawane są nowe.": "offers in our database and new ones are added regularly.",
     "Czytaj dalej": "Read more",
     "Oferty": "Offers",
-    "Nazwa firmy": "Company name"
+    "Nazwa firmy": "Company name",
+    "Back to Home": "Back to Home",
+    "Zaloguj się": "Login"
 }
