--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -129,5 +129,7 @@
     "ofert i regularnie dodawane są nowe.": "ofert i regularnie dodawane są nowe.",
     "Czytaj dalej": "Czytaj dalej",
     "Oferty": "Oferty",
-    "Nazwa firmy": "Nazwa firmy"
+    "Nazwa firmy": "Nazwa firmy",
+    "Back to Home": "Powrót go strony głównej",
+    "Zaloguj się": "Zaloguj się"
 }
