--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -129,7 +129,8 @@
     "ofert i regularnie dodawane są nowe.": "вакансий, и новые добавляются регулярно.",
     "Czytaj dalej": "Подробнее",
     "Oferty": "Вакансии",
-    "Nazwa firmy": "Название фирмы"
-
+    "Nazwa firmy": "Название фирмы",
+    "Back to Home": "Вернуться к Главной страницы",
+    "Zaloguj się": "Войдите"
 
 }
