--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -130,6 +130,8 @@
     "ofert i regularnie dodawane są nowe.": "вакансій, і нові додаються регулярно.",
     "Czytaj dalej": "Докладніше",
     "Oferty": "Вакансії",
-    "Nazwa firmy": "Назва фірми"
+    "Nazwa firmy": "Назва фірми",
+    "Back to Home": "Повернутися до Головної сторінки",
+    "Zaloguj się": "Увійдіть"
 
 }
