updated languages, design for applicants etc.

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -131,5 +131,23 @@
     "Oferty": "Offers",
     "Nazwa firmy": "Company name",
     "Back to Home": "Back to Home",
-    "Zaloguj się": "Login"
+    "Zaloguj się": "Login",
+    "Other articles": "Other articles",
+    "Back to applicants": "Back to applicants",
+    "Articles": "Articles",
+    "Add new article": "Add new article",
+    "Add article": "Add article",
+    "Update article": "Update article",
+    "Pinned": "Pinned",
+    "Nie": "Yes",
+    "Tak": "No",
+    "Content": "Content",
+    "Zresetuj hasło": "Reset password",
+    "Utwórz konto studenckie i znajdź wymarzone praktyki lub zarejestruj się jako firma, by móc dodawać oferty pracy.": "Create a student account and find your dream internship or register as a company to add jobs.",
+    "Wybierz rodzaj konta": "Choose your account type",
+    "Twoja specjalizacja": "Your specialisation",
+    "Last name": "Last name",
+    "Kategoria firmy": "Company category",
+    "Zweryfikuj email": "Verify email"
+
 }
