--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -131,5 +131,22 @@
     "Oferty": "Oferty",
     "Nazwa firmy": "Nazwa firmy",
     "Back to Home": "Powrót go strony głównej",
-    "Zaloguj się": "Zaloguj się"
+    "Zaloguj się": "Zaloguj się",
+    "Other articles": "Inne artykuły",
+    "Back to applicants": "Powrót do aplikantów",
+    "Articles": "Artykuły",
+    "Add new article": "Dodaj nowy artykuł",
+    "Add article": "Dodaj artykuł",
+    "Update article": "Aktualizowany artykuł",
+    "Pinned": "Przypięty",
+    "Nie": "Nie",
+    "Tak": "Tak",
+    "Content": "",
+    "Zresetuj hasło": "Zresetuj hasło",
+    "Utwórz konto studenckie i znajdź wymarzone praktyki lub zarejestruj się jako firma, by móc dodawać oferty pracy.": "Utwórz konto studenckie i znajdź wymarzone praktyki lub zarejestruj się jako firma, by móc dodawać oferty pracy.",
+    "Wybierz rodzaj konta": "Wybierz rodzaj konta",
+    "Twoja specjalizacja": "Twoja specjalizacja",
+    "Last name": "Nazwisko",
+    "Kategoria firmy": "Kategoria firmy",
+    "Zweryfikuj email": "Zweryfikuj email"
 }
