--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -131,6 +131,23 @@
     "Oferty": "Вакансии",
     "Nazwa firmy": "Название фирмы",
     "Back to Home": "Вернуться к Главной страницы",
-    "Zaloguj się": "Войдите"
+    "Zaloguj się": "Войдите",
+    "Other articles": "Прочие статьи",
+    "Back to applicants": "Вернуться к кандидатам",
+    "Articles": "Статьи",
+    "Add new article": "Добавить новую статью",
+    "Add article": "Добавить статью",
+    "Update article": "Обновить статью",
+    "Pinned": "Закреплено",
+    "Nie": "Да",
+    "Tak": "Нет",
+    "Content": "Содержание",
+    "Zresetuj hasło": "Сбросить пароль",
+    "Utwórz konto studenckie i znajdź wymarzone praktyki lub zarejestruj się jako firma, by móc dodawać oferty pracy.": "Создайте учетную запись студента и найдите стажировку своей мечты или зарегистрируйтесь как компания, чтобы добавлять вакансии.",
+    "Wybierz rodzaj konta": "Выберите тип аккаунта",
+    "Twoja specjalizacja": "Ваша специальность",
+    "Last name": "Фамилия",
+    "Kategoria firmy": "Категория фирмы",
+    "Zweryfikuj email": "Проверьте электронную почту"
 
 }
