--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -132,6 +132,22 @@
     "Oferty": "Вакансії",
     "Nazwa firmy": "Назва фірми",
     "Back to Home": "Повернутися до Головної сторінки",
-    "Zaloguj się": "Увійдіть"
-
+    "Zaloguj się": "Увійдіть",
+    "Other articles": "Інші статті",
+    "Back to applicants": "Назад до кандидатів",
+    "Articles": "Статті",
+    "Add new article": "Додати нову статтю",
+    "Add article": "Додати статтю",
+    "Update article": "Оновити статтю",
+    "Pinned": "Закріплено",
+    "Nie": "Ні",
+    "Tak": "Так",
+    "Content": "Зміст",
+    "Zresetuj hasło": "Скинути пароль",
+    "Utwórz konto studenckie i znajdź wymarzone praktyki lub zarejestruj się jako firma, by móc dodawać oferty pracy.": "Створіть обліковий запис студента та знайдіть своє омріяне стажування або зареєструйтесь як фірма, щоб мати можливість розміщувати пропозиції про роботу.",
+    "Wybierz rodzaj konta": "Виберіть тип аккаунта",
+    "Twoja specjalizacja": "Ваша спеціальність",
+    "Last name": "Прізвище",
+    "Kategoria firmy": "Категорія фірми",
+    "Zweryfikuj email": "Перевірте електронну пошту"
 }
