added updated language

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -148,6 +148,10 @@
     "Twoja specjalizacja": "Your specialisation",
     "Last name": "Last name",
     "Kategoria firmy": "Company category",
-    "Zweryfikuj email": "Verify email"
-
+    "Zweryfikuj email": "Verify email",
+    "I accept": "I accept",
+    "Show password": "Show password",
+    "Terms & Conditions": "Terms & Conditions",
+    "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Akceptacja regulaminu jest niezbędna przy rejestracji.",
+    "Add your CV": "Add your CV"
 }
