--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -148,5 +148,10 @@
     "Twoja specjalizacja": "Twoja specjalizacja",
     "Last name": "Nazwisko",
     "Kategoria firmy": "Kategoria firmy",
-    "Zweryfikuj email": "Zweryfikuj email"
+    "Zweryfikuj email": "Zweryfikuj email",
+    "I accept": "Akceptuję",
+    "Show password": "Pokaż hasło",
+    "Terms & Conditions": "Regulamin",
+    "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Akceptacja regulaminu jest niezbędna przy rejestracji.",
+    "Add your CV": "Dodaj swoje CV"
 }
