--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -148,6 +148,10 @@
     "Twoja specjalizacja": "Ваша специальность",
     "Last name": "Фамилия",
     "Kategoria firmy": "Категория фирмы",
-    "Zweryfikuj email": "Проверьте электронную почту"
-
+    "Zweryfikuj email": "Проверьте электронную почту",
+    "I accept": "Я принимаю",
+    "Show password": "Показать пароль",
+    "Terms & Conditions": "Правила и условия",
+    "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Для регистрации необходимо принять условия и правила.",
+    "Add your CV": "Добавьте свое резюме"
 }
