--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -149,5 +149,10 @@
     "Twoja specjalizacja": "Ваша спеціальність",
     "Last name": "Прізвище",
     "Kategoria firmy": "Категорія фірми",
-    "Zweryfikuj email": "Перевірте електронну пошту"
+    "Zweryfikuj email": "Перевірте електронну пошту",
+    "I accept": "Я приймаю",
+    "Show password": "Показати пароль",
+    "Terms & Conditions": "Правила та умови",
+    "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Для реєстрації необхідно прийняти правила та умови.",
+    "Add your CV": "Додайте своє резюме"
 }
