--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -153,5 +153,7 @@
     "Show password": "Show password",
     "Terms & Conditions": "Terms & Conditions",
     "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Akceptacja regulaminu jest niezbędna przy rejestracji.",
-    "Add your CV": "Add your CV"
+    "Add your CV": "Add your CV",
+    "Recomended size is 1024x320px.": "Recomended size is 1024x320px.",
+    "Title": "Title"
 }
