--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -153,5 +153,7 @@
     "Show password": "Показать пароль",
     "Terms & Conditions": "Правила и условия",
     "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Для регистрации необходимо принять условия и правила.",
-    "Add your CV": "Добавьте свое резюме"
+    "Add your CV": "Добавьте свое резюме",
+    "Recomended size is 1024x320px.": "Рекомендуемый размер - 1024x320px.",
+    "Title": "Заголовок"
 }
