--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -154,5 +154,7 @@
     "Show password": "Показати пароль",
     "Terms & Conditions": "Правила та умови",
     "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Для реєстрації необхідно прийняти правила та умови.",
-    "Add your CV": "Додайте своє резюме"
+    "Add your CV": "Додайте своє резюме",
+    "Recomended size is 1024x320px.": "Рекомендований розмір - 1024x320px.",
+    "Title": "Заголовок"
 }
