--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -155,5 +155,6 @@
     "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Akceptacja regulaminu jest niezbędna przy rejestracji.",
     "Add your CV": "Add your CV",
     "Recomended size is 1024x320px.": "Recomended size is 1024x320px.",
-    "Title": "Title"
+    "Title": "Title",
+    "Lokalizacja": "Location"
 }
