--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -155,5 +155,6 @@
     "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Akceptacja regulaminu jest niezbędna przy rejestracji.",
     "Add your CV": "Dodaj swoje CV",
     "Recomended size is 1024x320px.": "Zalecany rozmiar to 1024x320px.",
-    "Title": "Tytuł"
+    "Title": "Tytuł",
+    "Lokalizacja": "Lokalizacja"
 }
