--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -155,5 +155,6 @@
     "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Для регистрации необходимо принять условия и правила.",
     "Add your CV": "Добавьте свое резюме",
     "Recomended size is 1024x320px.": "Рекомендуемый размер - 1024x320px.",
-    "Title": "Заголовок"
+    "Title": "Заголовок",
+    "Lokalizacja": "Місцезнаходженння"
 }
