--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -156,5 +156,6 @@
     "Akceptacja regulaminu jest niezbędna przy rejestracji.": "Для реєстрації необхідно прийняти правила та умови.",
     "Add your CV": "Додайте своє резюме",
     "Recomended size is 1024x320px.": "Рекомендований розмір - 1024x320px.",
-    "Title": "Заголовок"
+    "Title": "Заголовок",
+    "Lokalizacja": "Місцезнаходженння"
 }
