search offers on home page

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -156,5 +156,6 @@
     "Add your CV": "Add your CV",
     "Recomended size is 1024x320px.": "Recomended size is 1024x320px.",
     "Title": "Title",
-    "Lokalizacja": "Location"
+    "Lokalizacja": "Location",
+    "Keyword": "Keyword, position, company"
 }
