--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -156,5 +156,6 @@
     "Add your CV": "Dodaj swoje CV",
     "Recomended size is 1024x320px.": "Zalecany rozmiar to 1024x320px.",
     "Title": "Tytuł",
-    "Lokalizacja": "Lokalizacja"
+    "Lokalizacja": "Lokalizacja",
+    "Keyword": "Słowo kluczowe, stanowisko, firma"
 }
