--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -156,5 +156,6 @@
     "Add your CV": "Добавьте свое резюме",
     "Recomended size is 1024x320px.": "Рекомендуемый размер - 1024x320px.",
     "Title": "Заголовок",
-    "Lokalizacja": "Місцезнаходженння"
+    "Lokalizacja": "Місцезнаходженння",
+    "Keyword": "Ключевое слово, должность, компания"
 }
