--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -157,5 +157,6 @@
     "Add your CV": "Додайте своє резюме",
     "Recomended size is 1024x320px.": "Рекомендований розмір - 1024x320px.",
     "Title": "Заголовок",
-    "Lokalizacja": "Місцезнаходженння"
+    "Lokalizacja": "Місцезнаходженння",
+    "Keyword": "Ключове слово, посада, компанія"
 }
