--- a/resources/lang/pl.json
+++ b/resources/lang/pl.json
@@ -157,5 +157,8 @@
     "Recomended size is 1024x320px.": "Zalecany rozmiar to 1024x320px.",
     "Title": "Tytuł",
     "Lokalizacja": "Lokalizacja",
-    "Keyword": "Słowo kluczowe, stanowisko, firma"
+    "Keyword": "Słowo kluczowe, stanowisko, firma",
+    "Categories": "Kategorie",
+    "We did not find job offers that met the selected criteria.": "Nie znaleźliśmy ofert pracy spełniających wybrane kryteria.",
+    "Check for typos in the phrases you typed, or try a more general query.": "Sprawdź, czy nie ma literówek we wpisanych frazach lub spróbuj bardziej ogólnego zapytania.\n"
 }
