--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -157,5 +157,7 @@
     "Recomended size is 1024x320px.": "Рекомендуемый размер - 1024x320px.",
     "Title": "Заголовок",
     "Lokalizacja": "Місцезнаходженння",
-    "Keyword": "Ключевое слово, должность, компания"
+    "Keyword": "Ключевое слово, должность, компания",
+    "We did not find job offers that met the selected criteria.": "Мы не нашли ни одной работы, соответствующей вашим критериям.\n",
+    "Check for typos in the phrases you typed, or try a more general query.": "Проверьте, нет ли опечаток во введенных вами фразах, или попробуйте задать более общий запрос."
 }
